migration_backup/k8s_ainfluencer/production/ai-inference-service-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: ai-inference-service
    service-type: ai-service
  name: ai-inference-service-vs
  namespace: ainflue-production
spec:
  hosts:
  - ai-inference-service.ainflue-production.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: gateway-error,connect-failure,refused-stream
    route:
    - destination:
        host: ai-inference-service.ainflue-production.svc.cluster.local
        port:
          number: 8003
    timeout: 30s
